# AirIQ

./: README.md  firebase-adminsdk-fbsvc.json
Backend-AirIQ/: pyproject.toml
Backend-AirIQ/src/: firebase_init.py  main.py  models.py
Backend-AirIQ/src/routes/: realtime.py  sensors.py
Backend-AirIQ/src/service/: alert.py
ESP32_code/: main.ino
Frontend/: package-lock.json  package.json
Frontend/src/: App.jsx  api.js
Frontend/src/components/: Dashboard.jsx
