[project]
name = "backend-airiq"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "routes (>=2.5.1,<3.0.0)",
    "router (>=0.1,<0.2)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "firebase-admin (>=6.6.0,<7.0.0)",
    "sseclient-py (>=1.8.0,<2.0.0)",
    "sse-starlette (>=2.2.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "backend_airiq", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
